tests/pass/ExceptionB.java
package pass;

import java.lang.Exception;

public class ExceptionB extends Exception {

}
